--- a/src/index.css
+++ b/src/index.css
@@ -35,4 +35,12 @@ h1 {
   line-height: 1.1;
 }
 
+@keyframes blink {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0.3; }
+}
+
+.animate-blink {
+  animation: blink 1s ease-in-out infinite;
+}
 
